testcases/error-cases/syntax-error-03/error.txt
error[E0001]: expected expression after '='
 --> input.canon:2:12
  |
1 | config {
2 |     name = 
  |            ^ expected an expression here
3 | }
  |
  = note: assignment expressions require a value on the right side
  = help: try providing a value like: name = "some_value"
